improve readImageBytesFromFile